--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,6 +13,19 @@
     <br /><br />
 </div>
 
+
+<form method="post">
+    <div class="row">
+        <div class="col-3">
+            <input type="submit" asp-controller="Home" asp-action="TestJSON" class="btn btn-primary" value="TestJSON" />
+        </div>
+    </div>
+</form>
+
+
+<br />
+<br />
+
 <form method="post" enctype="multipart/form-data">
     <div class="row">
         <label>Select Excel File</label>
